--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "dependencies": {
     "axios": "^1.3.5",
     "dotenv": "^16.0.3",
+    "knex": "^2.4.2",
+    "pg": "^8.11.0",
+    "slug": "^8.2.2",
     "turndown": "^7.1.2"
   }
 }
